# sf-behaviour

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  ci-integration.md  cli-reference.md  custom-scorers.md  getting-started.md  index.md  scorers.md  troubleshooting.md  yaml-format.md
examples/: test_cases.yaml
src/sf_behaviour/: __init__.py  cli.py  dataset.py  eval.py  report.py  yaml_parser.py
src/sf_behaviour/scorers/: __init__.py  exact_match.py  faithfulness.py  json_schema.py  llm_judge.py  pii_leakage.py  refusal.py
tests/: test_cli.py  test_dataset.py  test_eval.py  test_new_cli_features.py  test_new_eval_features.py  test_new_scorers.py  test_new_yaml_features.py  test_report.py  test_scorers.py  test_yaml_parser.py
